# kittsay

./: README.md  justfile  pyproject.toml
kittsay/: __main__.py  app.py  kitt_agent.py  kitt_animation.py
tests/: test_kittsay.py
